# M5Paper_8086

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  config_defs.c  config_defs.h  idf_component.yml  main.cpp  settings.c  settings.h  wifi_secrets.h.in
main/bt/: bt_keyboard.c  bt_keyboard.h  esp_hid_gap.c
main/display/: epd_driver.c  epd_driver.h  epd_update.c  epd_update.h  font8x16.c  font8x16.h
main/dos/: bios.c  bios.h  cpu8086.c  cpu8086.h  disk.c  disk.h  fat16_image.c  fat16_image.h  hdd_image.c  hdd_image.h  interrupts.c  interrupts.h  memory.c  memory.h  ports.c  ports.h  speaker.cpp  speaker.h  video.c  video.h  xms.c  xms.h
main/emulator/: embedded_8086tiny_bios.c  embedded_8086tiny_bios.h
main/net/: disk_swap_server.c  disk_swap_server.h  wifi_ap.c  wifi_ap.h  wifi_sta.c  wifi_sta.h
main/net/webui/: index.html
main/sdcard/: sdcard.c  sdcard.h
